--- a/web/login.html
+++ b/web/login.html
@@ -17,7 +17,7 @@ and open the template in the editor.
             <form action="DispatchServlet" method="POST">
                 <div>
                     <label for="username">Username:</label> <br/>
-                    <input type="text" id="username" name="txtUsername" 
+                    <input type="text" id="username" name="txtUsername"
                            value="">
                 </div>
                 <div>
@@ -43,4 +43,5 @@ and open the template in the editor.
             </form>
         </div>
     </body>
+    hello
 </html>
